--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rollup -c build/rollup.config.js",
     "dev": "rollup -w -c build/rollup.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node build/dev-server.js",
     "lint": "eslint --fix src/"
   },
   "devDependencies": {
@@ -22,6 +22,8 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
+    "html-webpack-plugin": "^2.30.1",
+    "opa": "^11.22.0",
     "rollup": "^0.48.0",
     "rollup-plugin-alias": "^1.3.0",
     "rollup-plugin-babel": "^2.4.0",
@@ -35,7 +37,11 @@
     "rollup-plugin-serve": "^0.4.2",
     "rollup-plugin-uglify": "^2.0.1",
     "rollup-watch": "^2.5.0",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.8.3",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.12.2",
+    "webpack-merge": "^0.14.1"
   },
   "repository": {
     "type": "git",
