--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,9 @@
 {
     "presets": [
         [
-            "es2015", 
-            {
-                "modules": false
-            }
+            "es2015"
         ],
         "flow"
     ],
-    "plugins": ["external-helpers"]
+    "plugins": ["transform-decorators-legacy"]
 }
