--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/bundle.js",
   "scripts": {
     "build": "rollup -c build/rollup.config.js",
-    "dev": "rollup -w -c build/rollup.config.js",
-    "test": "node build/dev-server.js",
+    "dev:build": "rollup -w -c build/rollup.config.js",
+    "dev:test": "node build/dev-server.js",
     "lint": "eslint --fix src/"
   },
   "devDependencies": {
@@ -14,6 +14,8 @@
     "babel-eslint": "^8.0.1",
     "babel-loader": "^6.4.1",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.23.0",
