--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "html-webpack-plugin": "^2.30.1",
-    "opa": "^11.22.0",
+    "opn": "^5.1.0",
     "rollup": "^0.48.0",
     "rollup-plugin-alias": "^1.3.0",
     "rollup-plugin-babel": "^2.4.0",
